--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       - ./backend:/api
     ports:
       - 3001:3000
+    environment:
+      DB_USERNAME: root
+      DB_PASSWORD: password
+      DB_HOST: db
     depends_on:
       - db
     tty: true
