--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -38,6 +38,8 @@ gem "rack-cors"
 
 gem 'dotenv-rails'
 gem 'ridgepole'
+gem 'graphql'
+gem 'propshaft'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -48,4 +50,5 @@ end
 group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
+  gem 'graphiql-rails'
 end
