--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -50,6 +50,11 @@ group :development, :test do
   gem 'rubocop-performance', require: false
   gem 'rubocop-rails', require: false
   gem 'rubocop-rspec', require: false
+
+  gem 'rspec-rails'
+  gem 'factory_bot_rails'
+  gem 'faker'
+  gem 'faker_japanese'
 end
 
 group :development do
