--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     tty: true
     stdin_open: true
   db:
-    image: mysql:latest
+    image: mysql:8.0
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
       - db-volume:/var/lib/mysql
