--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
         run: bundle exec rubocop
 
       - name: Database create
-        run: bundle exec rails db:create RAILS_ENV=test
+        run: |
+          cp config/database.yml.ci config/database.yml
+          bundle exec rails db:create RAILS_ENV=test
 
       - name: migrate
         run: bundle exec ridgepole --config config/database.yml --env test --file db/Schemafile --apply
